--- a/Home-Tasks-main/Frontend Mentor/index.html
+++ b/Home-Tasks-main/Frontend Mentor/index.html
@@ -39,11 +39,8 @@
               <li><a href="#">Products</a></li>
               <li><a href="#">Support</a></li>
             </ul>
-            <li>
-              <a href=""
-                ><i class="fa-solid fa-bars menu-btn" style="color: #ffffff"></i
-              ></a>
-            </li>
+            <i class="fa-solid fa-bars menu-btn" style="color: #ffffff"></i
+            >
           </nav>
         </div>
         <h1 class="header-text">IMMERSIVE EXPERIENCES THAT DELIVER</h1>
