--- a/Home-Tasks-main/Frontend Mentor/index.html
+++ b/Home-Tasks-main/Frontend Mentor/index.html
@@ -49,14 +49,14 @@
 
     <section class="interactive">
       <div class="container">
-        <div class="left">
+        <div class="col-sm-12 col-md-12 col-lg-12 left">
           <img
             class="interactive-image"
             src="./images/image-interactive.jpg"
             alt="interactive-img"
           />
         </div>
-        <div class="right">
+        <div class="col-sm-12 col-md-12 col-lg-12 right">
           <h1 class="headings text-center">THE LEADER IN INTERACTIVE VR</h1>
           <p class="text text-center">
             Founded in 2011, Loop Studios has been producing world class Virtual
@@ -79,37 +79,37 @@
 
         <div class="reverse">
           <div class="row first-cards">
-            <div class="col img-card">
+            <div class="col-sm-12 col-md-6 col-lg-3  img-card">
               <img src="./images/image-deep-earth.jpg" alt="" />
               <span>DEEP EARTH</span>
             </div>
-            <div class="col img-card">
+            <div class="col-sm-12 col-md-6 col-lg-3  img-card">
               <img src="./images/image-night-arcade.jpg" alt="" />
               <span>NIGHT ARCADE</span>
             </div>
-            <div class="col img-card">
+            <div class="col-sm-12 col-md-6 col-lg-3 m img-card">
               <img src="./images/image-soccer-team.jpg" alt="" />
               <span>SOCCER TEAM VR</span>
             </div>
-            <div class="col img-card">
+            <div class="col-sm-12 col-md-6 col-lg-3  img-card">
               <img src="./images/image-grid.jpg" alt="" />
               <span>THE GRID</span>
             </div>
           </div>
           <div class="row last-cards">
-            <div class="col img-card">
+            <div class="col-sm-12 col-md-6 col-lg-3  img-card">
               <img src="./images/image-from-above.jpg" alt="" />
               <span>FROM UP ABOBE VR</span>
             </div>
-            <div class="col img-card">
+            <div class="col-sm-12 col-md-6 col-lg-3  img-card">
               <img src="./images/image-pocket-borealis.jpg" alt="" />
               <span>POCKET BOREALIS</span>
             </div>
-            <div class="col img-card">
+            <div class="col-sm-12 col-md-6 col-lg-3  img-card">
               <img src="./images/image-curiosity.jpg" alt="" />
               <span>THE CRUIOSITY</span>
             </div>
-            <div class="col img-card">
+            <div class="col-sm-12 col-md-6 col-lg-3  img-card">
               <img src="./images/image-fisheye.jpg" alt="" />
               <span>MAKE IT FISHEYE</span>
             </div>
