--- a/Home-Tasks-main/Frontend Mentor/index.html
+++ b/Home-Tasks-main/Frontend Mentor/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,6 +47,27 @@
         <h1 class="header-text">IMMERSIVE EXPERIENCES THAT DELIVER</h1>
       </div>
     </section>
+
+    <section class="hidden-section">
+      <div class="container">
+        <div class="top-head">
+          <h2>loopstudios</h2>
+          <i class="fa-solid fa-xmark" style="color: #ffffff;"></i>
+        </div>
+        <div class="pages">
+           <nav>
+          <ul>
+            <li><a href=""> About</a></li>
+            <li><a href="">Careers</a> </li>
+            <li><a href="">Events</a> </li>
+            <li><a href="">Products</a> </li>
+            <li><a href=""> Support</a></li>
+          </ul>
+        </nav>
+        </div>
+      </div>  
+    </section>
+
 
     <section class="interactive">
       <div class="container">
